[package]
name = "ecvrf"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
sha2 = "0.10.2"
curve25519-dalek = { git = "https://github.com/AmitPr/curve25519-dalek" }
thiserror = "1.0.31"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }