[package]
name = "ecvrf"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.2", default-features = false }
curve25519-dalek = { git = "https://github.com/AmitPr/curve25519-dalek", default-features = false, features = ["alloc", "u64_backend"] }
thiserror = "1.0.31"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"